    - Attempt to set the shortcut description
    - Add bootleg shortcut description due to https://forums.factorio.com/126363
    - Embed normal quality indicator inside icon
    - Label the selection tool with the quality's name
    - Label the spawned one as normal immediately
    - Just use a grey upgrade planner as the icon
    - Experiment with tinted selection tools per quality
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025. 01. 26
  Info:
    - Begin selection tool conversion
    - Add shortcut button (resolves #20)
    - Test changing quality with scrolling
    - Reordering
    - Generate greyscale quality category icons
    - Swap beacon icon with module icon
    - Rename inserters to filters (since it includes loaders and splitters too)
    - Decrease generator line width
    - Create initial gui frame
    - Load the quality categories as buttons
    - Give the quality category buttons a label
    - Localize the quality category names
    - Give the quality categories a description
    - Give each quality category a switch button
    - Add an inner frame for looks
    - Cleanup 1.0.1 - 1.0.8 inventories better
    - Disable the switch for everything but the entities
    - Define default switch states
    - Attempt to store itemdata within each quality upgrade planner
    - Abandon itemdata due to https://forums.factorio.com/126350
    - Open gui by clicking the shortcut again instead
    - Use alt+scroll (vs shift+scroll) to set the quality instead
    - Support upgrading entities like 1.0.x could
    - Begin supporting ghosts (eww, create_entity, lets not)
    - Support upgrading ghosts properly
    - Allow using the quality upgrade planner in remote view
    - Prevent "index out of bounds" by only mapping once per entity name
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2024. 12. 12
  Info: